--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<h2>About Me</h2>
 			<img id="bio-image" src="assets/images/HeadShot.png" alt="Your Name">
 			<p>
-				Former DJ and Music Industry expert turned aspiring Web Developer. Currently working an office job for a Fortune 100 company during this transition. Looking forward to getting back into a creative position. Colorado native, snowboarder, nature enthusiast, plant based lifetyle promotor and ally to the animal kingdom.
+				Former DJ and Music Industry expert turned aspiring Web Developer. Currently working an office job for a Fortune 100 company during this transition. Looking forward to getting back into a creative position. Colorado native, snowboarder and nature enthusiast.
 			</p>
     	</section>
 
